...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAlignment="center"
        android:textSize="20sp"
        android:focusable="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame" />

    <Spinner
        android:id="@+id/chooseRole1"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="124dp"
        android:prompt="@string/chooseRole"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
...
